Fixing Login Styles in Dark Mode

--- a/src/shared/styles/dashboard/common/_login.styl
+++ b/src/shared/styles/dashboard/common/_login.styl
@@ -9,6 +9,7 @@
         margin 0 auto
         margin-top 200px
         overflow hidden
+        padding 20px
         position relative
         width 500px
 
